<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeMarried</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wemarried_logo">WeMarried</string>
    <string name="wemarried_teamlogo">Copyright © Vector Studio</string>
    
    <string name="wemarried_midpage_title">Our Wedding</string>
    <string name="wemarried_startpage_player1">Bridegroom: Chris.Li</string>
    <string name="wemarried_startpage_player2">Bride:      Beatrice.Shen</string>
    <string name="wemarried_startpage_party">Wedding Party:</string>
    <string name="wemarried_startpage_date">Time: 17:00 2013.11.30</string>
    <string name="wemarried_startpage_place">Place: Victoria Hotel, Changxing</string>
    <string name="wemarried_startpage_text">A Start For The Blessed Future</string>
    <string name="wemarried_menu_title">Love</string>
    <string name="wemarried_menu_items">Pictures</string>
    <string name="wemarried_menu_empty"></string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="wemarried_menu_changxing">Changxing</string>
    <string name="wemarried_menu_lavender">Lavender</string>
    <string name="wemarried_menu_nanshan">Nanshan</string>
    <string name="wemarried_menu_sofa">Sofa</string>
    <string name="wemarried_menu_sunflower">Sunflower</string>
    <string name="wemarried_menu_uniform">Uniform</string>
    <string name="wemarried_menu_westlake">Westlake</string>
    <string name="wemarried_menu_contact">About</string>
    
    <string name="wemarried_rightpage_title1">Scene Place</string>
    <string name="wemarried_rightpage_desc1">This sets of pictures are taken in different places.</string>
    <string name="wemarried_rightpage_title2">Set Name</string>
    <string name="wemarried_rightpage_desc2">The suites are given different names</string>
    <string name="wemarried_rightpage_title3">Description</string>
    <string name="wemarried_rightpage_desc3"></string>
    
    <string name="wemarried_rightpage_scene_changxing">On the square in the front of the goverment building of Changxing.</string>
    <string name="wemarried_rightpage_suitname_changxing">Travel</string>
    <string name="wemarried_rightpage_scene_lavender">In the lavender manor of Changxing.</string>
    <string name="wemarried_rightpage_suitname_lavender">Soulmate</string>
    <string name="wemarried_rightpage_scene_nanshan">Nanshan road, Hangzhou westlake scenic area.</string>
    <string name="wemarried_rightpage_suitname_nanshan">Timeless</string>
    <string name="wemarried_rightpage_scene_sofa">In the studio of 80 Impression, Binjiang Hangzhou.</string>
    <string name="wemarried_rightpage_suitname_sofa">Golden Days</string>
    <string name="wemarried_rightpage_scene_sunflower">In the studio of 80 Impression, Binjiang Hangzhou.</string>
    <string name="wemarried_rightpage_suitname_sunflower">A Couple</string>    
    <string name="wemarried_rightpage_scene_uniform">In the studio of 80 Impression, Binjiang Hangzhou.</string>
    <string name="wemarried_rightpage_suitname_uniform">The Revolution</string>  
    <string name="wemarried_rightpage_scene_westlake">Yanggong Dike, Hangzhou westlake scenic area.</string>
    <string name="wemarried_rightpage_suitname_westlake">Lakeshore</string>
    
    <string name="wemarried_aboutpage_version">Version: 0.0.1</string>
    <string name="wemarried_aboutpage_author">Vector Studio</string>
    <string name="wemarried_aboutpage_copyright">Copyright(©) 2013</string>
    <string name="wemarried_aboutpage_right">Hangzhou Vector Studio</string>
    <string name="wemarried_aboutpage_allrightreserved">All Right Reserved</string>
    <string name="wemarried_aboutpage_contact">Author: Chris.Li</string>
    <string name="wemarried_aboutpage_email">Email: chris.li.cheng@gmail.com</string>
    
</resources>
